app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #e0d1d1;
}



@media (prefers-color-scheme: dark) {
  :root {
    --background: #c21818;
    --foreground: #ededed;
  }
}

/* font test classes */
.font-tomorrow {
  font-family: "Tomorrow", sans-serif;
}

.font-covered {
  font-family: "Covered By Your Grace", cursive;
}

.font-nixie {
  font-family: "Nixie One", serif;
}

.font-silkscreen {
  font-family: "Silkscreen", sans-serif;
}

.font-caveat {
  font-family: "Caveat", cursive;
}

.font-caveat-brush {
  font-family: "Caveat Brush", cursive;
}




/* styles */

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

main {
  width: 100%;
  height: 100%;
}


h1 {
  font-family: "Caveat";
  font-size: 2em;
}

p {
  font-family: "Caveat Brush";
  
  
}


.no-scroll-body {
  height: 100vh;
  overflow: hidden;
  position: relative;
}



.paper-frame {
  height: 100%;
  overflow: hidden;
  box-sizing: border-box;
  background: #ECDBC4;
  padding: 3% 2% 1% 2%;
  background-image: 
    radial-gradient(rgba(0, 0, 0, 0.147) 1px, transparent 1px);
  background-size: 5px 5px;
}


  

.inner-frame {
  border-radius: 40px;
  
  padding: 10px;

  height: 100%;
  background: #c7ae8e;
  overflow-y: auto;
  
  scrollbar-width: none;



  background-image:
    radial-gradient(#ffffff24 2px, transparent 2px);
  background-size: 20px 20px;



  /* illusion shadow! inner-frame is not behind the paper frame!!!! */
  box-shadow:
    inset 4px 4px 0px rgba(0, 0, 0, 0.353);


  /* sticker like look? */
  border: 2px solid #ffffff;
  outline: 2px solid #443c31; 




  border-radius: 20px;
  

  
}


/* todo: figure out coloring thematics right now. */
/* also figure out the textures to make the page look papery */
.paper-nav {
  width: 100%;
  position: absolute;
  display: flex;
  color: #000000;
  justify-content: center;
  gap: 10px;



}


.paper-outline {
  border: 1px solid #000000;
  outline: 2px solid #ffffff;
  border-radius: 20px;
}


.tab-design{
  background-image:
    linear-gradient(45deg, rgba(255,255,255,0.1) 25%, transparent 25%),
    linear-gradient(-45deg, rgba(255,255,255,0.1) 25%, transparent 25%),
    linear-gradient(45deg, transparent 75%, rgba(255,255,255,0.1) 75%),
    linear-gradient(-45deg, transparent 75%, rgba(255,255,255,0.1) 75%);
  background-size: 20px 20px;
  background-color: #c7ae8e;
  box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.353);

}

.stitch-layer {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 90%;
  width: 95%;
  border-left: 1px dashed #fff;
  border-right: 1px dashed #fff;
  border-bottom: 1px dashed #fff;
  border-top: none;
  /*outline: 2px solid #000; */
  border-radius: 0 0 12px 12px;
  font-family: "Caveat Brush";
  font-size: 2em;

}

.quick-about-me-main {
  display: grid;
  place-items: center;
}

.quick-about-me{
  padding: 10% 10% 10% 10%;

}

